atividades pós feedback

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <form>
+    <label>Fruta:</label>
+    <input onkeydown="input()" id="fruta" type="text" >
+    <button type="button" onclick="novaFruta()">Enviar</button>
+  </form>
   </main>
 </body>
 
